<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#F5F5F5">
    <!-- Logo -->
    <ImageView
        android:id="@+id/logoCampusGO"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_campusgo"
        android:contentDescription="Logo CampusGO"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:padding="12dp"
        android:textColor="#212121"
        android:textColorHint="#9E9E9E"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#212121"
        android:textColorHint="#9E9E9E"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="#2196F3"
        android:padding="14dp"/>
</LinearLayout>

